--- a/My model/Trying to fit a MSIR model.ipynb
+++ b/My model/Trying to fit a MSIR model.ipynb
@@ -2,83 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "ec20282c-e2d7-4de7-ae12-29dfa919e91c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: nlme\n",
-      "\n",
-      "This is mgcv 1.8-40. For overview type 'help(\"mgcv-package\")'.\n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'ggplot2' was built under R version 4.2.0\"\n",
-      "Warning message:\n",
-      "\"package 'tidyverse' was built under R version 4.2.0\"\n",
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.1 --\n",
-      "\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4     \n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'stringr' was built under R version 4.2.0\"\n",
-      "Warning message:\n",
-      "\"package 'forcats' was built under R version 4.2.0\"\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcollapse()\u001b[39m masks \u001b[34mnlme\u001b[39m::collapse()\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "\n",
-      "Attaching package: 'lubridate'\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:base':\n",
-      "\n",
-      "    date, intersect, setdiff, union\n",
-      "\n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'gridExtra' was built under R version 4.2.0\"\n",
-      "\n",
-      "Attaching package: 'gridExtra'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:dplyr':\n",
-      "\n",
-      "    combine\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: 'magrittr'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:purrr':\n",
-      "\n",
-      "    set_names\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:tidyr':\n",
-      "\n",
-      "    extract\n",
-      "\n",
-      "\n",
-      "Warning message:\n",
-      "\"package 'rstatix' was built under R version 4.2.0\"\n",
-      "\n",
-      "Attaching package: 'rstatix'\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:stats':\n",
-      "\n",
-      "    filter\n",
-      "\n",
-      "\n"
+     "ename": "ERROR",
+     "evalue": "Error in library(rstatix): there is no package called 'rstatix'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(rstatix): there is no package called 'rstatix'\nTraceback:\n",
+      "1. library(rstatix)"
      ]
     }
    ],
@@ -93,6 +27,29 @@
     "library(writexl)\n",
     "library(magrittr)\n",
     "library(rstatix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "feaa3f3a-f1f5-47f5-a64b-4d3673758c11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'rstattix' is not available for this version of R\n",
+      "\n",
+      "A version of this package for your version of R might be available elsewhere,\n",
+      "see the ideas at\n",
+      "https://cran.r-project.org/doc/manuals/r-patched/R-admin.html#Installing-packages\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"rstattix\")"
    ]
   },
   {
