--- a/My model/Trying to use mcstate again.ipynb
+++ b/My model/Trying to use mcstate again.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "40c6054e-c66e-450d-a666-675da0ac5908",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.1 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
       "\u001b[1mRows: \u001b[22m\u001b[34m682\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m23\u001b[39m\n",
       "\u001b[36m--\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "\u001b[1mDelimiter:\u001b[22m \",\"\n",
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "5d3acb44-3e35-473c-9a7f-b12ef0e5eeb3",
    "metadata": {},
    "outputs": [
@@ -103,13 +114,13 @@
     "tab <- table(rsv_by_age$age_days, rsv_by_age$infection)\n",
     "true_hist <- data.frame(age=rownames(tab), infected=tab[,2])\n",
     "true_hist$age <- as.numeric(true_hist$age)\n",
-    "true_hist$cuminfection <- cumsum(true_hist$infected\n",
+    "true_hist$cuminfection <- cumsum(true_hist$infected)\n",
     "tail(true_hist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "af89d61a-da9c-4799-8880-d7f3626d2b1c",
    "metadata": {},
    "outputs": [
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "343205b1-d6e7-4288-b47c-c0eebf10fca4",
    "metadata": {},
    "outputs": [
@@ -227,23 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "21bb39e4-a406-48bb-af77-e5b1b917d7b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#define a dataframe with all days between the youngest age and the oldest age\n",
-    "min = head(dframe$age,1)\n",
-    "max = tail(dframe$age,1)\n",
-    "days <- seq(min, max)\n",
-    "infections <- rep(0, max-min+1)\n",
-    "\n",
-    "df <- data.frame(days, infections)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "74c5941c-6c45-4d4f-b80c-c01ce04c35f9",
    "metadata": {},
    "outputs": [],
@@ -257,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "dc1222b8-a61f-4573-97a4-bc69d981f3a7",
    "metadata": {},
    "outputs": [
@@ -328,7 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
+   "id": "d24ade78-c68e-4b42-bc4a-8453faafc1e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define a dataframe with all days between the youngest age and the oldest age\n",
+    "min = head(dframe$age,1)\n",
+    "max = tail(dframe$age,1)\n",
+    "days <- seq(min, max)\n",
+    "infections <- rep(0, max-min+1)\n",
+    "\n",
+    "df <- data.frame(days, infections)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "e11ff308-0e76-4e81-93c9-a8df23a75909",
    "metadata": {},
    "outputs": [],
@@ -341,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "id": "690c9d38-1a04-4ec8-b10e-90e8d4053508",
    "metadata": {},
    "outputs": [
@@ -416,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "9ff22d93-8b6f-4634-a19b-9490c3c5c8b7",
    "metadata": {},
    "outputs": [],
@@ -434,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "4775d8dd-0958-44ce-82cf-1c57875e8984",
    "metadata": {},
    "outputs": [],
@@ -479,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "1e486be5-b103-44a3-97ea-d16cbb9e1a45",
    "metadata": {},
    "outputs": [
@@ -510,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "id": "fa52fa00-e692-474e-ae1b-14491ffde487",
    "metadata": {},
    "outputs": [
@@ -518,7 +529,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using cached model\n",
+      "\u001b[36mi\u001b[39m 18 functions decorated with [[cpp11::register]]\n",
+      "\n",
+      "\u001b[32mv\u001b[39m generated file \u001b[34m\u001b[34mcpp11.R\u001b[34m\u001b[39m\n",
+      "\n",
+      "\u001b[32mv\u001b[39m generated file \u001b[34m\u001b[34mcpp11.cpp\u001b[34m\u001b[39m\n",
+      "\n",
+      "Re-compiling sir77a075f7\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m-\u001b[39m\u001b[90m  \u001b[39m\u001b[90minstalling *source* package 'sir77a075f7' ...\u001b[39m\u001b[36m\u001b[36m (397ms)\u001b[36m\u001b[39m\n",
+      "   ** using staged installation\n",
+      "   ** libs\n",
+      "   g++  -std=gnu++11 -I\"C:/Users/julia/anaconda3/lib/R/include\" -DNDEBUG  -I'C:/Users/julia/OneDrive - London School of Hygiene and Tropical Medicine/Documents/R/win-library/4.1/cpp11/include'     -IC:/Users/julia/anaconda3/Lib/R/library/dust/include -DHAVE_INLINE -fopenmp   -O2 -Wall  -march=x86-64 -mtune=generic  -Wall -pedantic -c cpp11.cpp -o cpp11.o\n",
+      "   g++  -std=gnu++11 -I\"C:/Users/julia/anaconda3/lib/R/include\" -DNDEBUG  -I'C:/Users/julia/OneDrive - London School of Hygiene and Tropical Medicine/Documents/R/win-library/4.1/cpp11/include'     -IC:/Users/julia/anaconda3/Lib/R/library/dust/include -DHAVE_INLINE -fopenmp   -O2 -Wall  -march=x86-64 -mtune=generic  -Wall -pedantic -c dust.cpp -o dust.o\n",
+      "   dust.cpp: In function 'cpp11::sexp dust::dust_info(const dust::pars_type<T>&) [with T = sir]':\n",
+      "   dust.cpp:298:28: warning: variable 'internal' set but not used [-Wunused-but-set-variable]\n",
+      "     298 |   const sir::internal_type internal = pars.internal;\n",
+      "         |                            ^~~~~~~~\n",
+      "   g++ -shared -s -o sir77a075f7.dll tmp.def cpp11.o dust.o -fopenmp -LC:/Users/julia/anaconda3/lib/R/bin/x64 -lR\n",
+      "   installing to C:/Users/julia/AppData/Local/Temp/RtmpWOIc6J/devtools_install_4b98ced3856/00LOCK-file4b983b487b08/00new/sir77a075f7/libs/x64\n",
+      "\u001b[90m-\u001b[39m\u001b[90m  \u001b[39m\u001b[90mDONE (sir77a075f7)\u001b[39m\u001b[36m\u001b[39m\n",
+      "\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36mi\u001b[39m Loading \u001b[34m\u001b[34msir77a075f7\u001b[34m\u001b[39m\n",
       "\n"
      ]
     }
@@ -540,7 +584,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
+   "id": "98237136-f558-4c26-a48b-af76e56dc6fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "10"
+      ],
+      "text/latex": [
+       "10"
+      ],
+      "text/markdown": [
+       "10"
+      ],
+      "text/plain": [
+       "[1] 10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sir_model$n_particles()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "f7923fb0-4b40-4bb5-8b63-27e5bd4f06fe",
    "metadata": {},
    "outputs": [],
@@ -555,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "id": "a2d2e157-8e0a-482f-a1da-61e45d2401c5",
    "metadata": {},
    "outputs": [
@@ -572,12 +645,54 @@
       "5. self$step(nrow(private$steps))",
       "6. private$step_r(step_index, partial)",
       "7. model$reorder(kappa)",
-      "8. private$methods_$reorder(private$ptr_, index)   # at line 142 of file C:/Users/julia/AppData/Local/Temp/Rtmp6BA7vg/file1864695f2cbd/R/dust.R"
+      "8. private$methods_$reorder(private$ptr_, index)   # at line 142 of file C:/Users/julia/AppData/Local/Temp/RtmpWOIc6J/file4b983b487b08/R/dust.R"
      ]
     }
    ],
    "source": [
     "filter$run(save_history = TRUE, pars = list(dt = dt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2af76b94-8c56-4a33-b35e-8621ead93f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in filter$history(): Model has not yet been run\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in filter$history(): Model has not yet been run\nTraceback:\n",
+      "1. plot_particle_filter(filter$history(), true_history, df$days)",
+      "2. matplot(times, t(history[1, , -1]), type = \"l\", xlab = \"Time\", \n .     ylab = \"Number of individuals\", col = cols[[\"S\"]], lty = 1, \n .     ylim = range(history))   # at line 8-10 of file <text>",
+      "3. t(history[1, , -1])   # at line 8-10 of file <text>",
+      "4. filter$history()   # at line 8-10 of file <text>",
+      "5. stop(\"Model has not yet been run\")"
+     ]
+    }
+   ],
+   "source": [
+    "plot_particle_filter <- function(history, true_history, times, obs_end = NULL) {\n",
+    "  if (is.null(obs_end)) {\n",
+    "    obs_end <- max(times)\n",
+    "  }\n",
+    "\n",
+    "  par(mar = c(4.1, 5.1, 0.5, 0.5), las = 1)\n",
+    "  cols <- c(S = \"#8c8cd9\", I = \"#cc0044\", R = \"#999966\")\n",
+    "  matplot(times, t(history[1, , -1]), type = \"l\",\n",
+    "          xlab = \"Time\", ylab = \"Number of individuals\",\n",
+    "          col = cols[[\"S\"]], lty = 1, ylim = range(history))\n",
+    "  matlines(times, t(history[2, , -1]), col = cols[[\"I\"]], lty = 1)\n",
+    "  matlines(times, t(history[3, , -1]), col = cols[[\"R\"]], lty = 1)\n",
+    "  matpoints(times[1:obs_end], t(true_history[1:3, , -1]), pch = 19,\n",
+    "            col = cols)\n",
+    "  legend(\"left\", lwd = 1, col = cols, legend = names(cols), bty = \"n\")\n",
+    "}\n",
+    "\n",
+    "true_history <- true_hist\n",
+    "plot_particle_filter(filter$history(), true_history, df$days)"
    ]
   }
  ],
