Tried to work around the index error, failed

--- a/My model/Trying to fit a SIR model.ipynb
+++ b/My model/Trying to fit a SIR model.ipynb
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "ac3c0b41-81a2-45a5-b50a-c30bbc4917e6",
    "metadata": {},
    "outputs": [
@@ -2138,6 +2138,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "b96d5c30-3bfc-4ccd-b5a6-30274f638bb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): attempt to apply non-function\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): attempt to apply non-function\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen_sir$index()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "id": "de70ac4d-0fcf-469a-96e5-eacd0ae7a4ba",
    "metadata": {},
@@ -2154,10 +2173,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "26d04ba6-ab1d-429e-8811-58179d372d61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in assert_is(data, \"particle_filter_data\"): object 'sir_data' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in assert_is(data, \"particle_filter_data\"): object 'sir_data' not found\nTraceback:\n",
+      "1. mcstate::particle_filter$new(data = sir_data, model = gen_sir, \n .     n_particles = n_particles, compare = case_compare, seed = 3L)",
+      "2. initialize(...)",
+      "3. assert_is(data, \"particle_filter_data\")"
+     ]
+    }
+   ],
    "source": [
     "n_particles <- 100\n",
     "filter <- mcstate::particle_filter$new(data = sir_data,\n",
