Small changes and re-runs to get figures as requested by Stefan + correct FOI ratios

--- a/My model/Mock data.ipynb
+++ b/My model/Mock data.ipynb
@@ -520,10 +520,18 @@
     "      } \n",
     "    \n",
     "      # FOI for each birth cohort\n",
-    "      lambda_sp = param[[\"P\"]]*spring_FOI_sp + param[[\"M\"]]*summer_FOI_sp + param[[\"A\"]]*autumn_FOI_sp + param[[\"W\"]]*winter_FOI_sp\n",
-    "      lambda_sm = param[[\"P\"]]*spring_FOI_sm + param[[\"M\"]]*summer_FOI_sm + param[[\"A\"]]*autumn_FOI_sm + param[[\"W\"]]*winter_FOI_sm\n",
-    "      lambda_au = param[[\"P\"]]*spring_FOI_au + param[[\"M\"]]*summer_FOI_au + param[[\"A\"]]*autumn_FOI_au + param[[\"W\"]]*winter_FOI_au\n",
-    "      lambda_wt = param[[\"P\"]]*spring_FOI_wt + param[[\"M\"]]*summer_FOI_wt + param[[\"A\"]]*autumn_FOI_wt + param[[\"W\"]]*winter_FOI_wt\n",
+    "      lambda_sp = (param[[\"M\"]]+param[[\"P\"]])*spring_FOI_sp + param[[\"M\"]]*summer_FOI_sp + \n",
+    "                (param[[\"M\"]]+param[[\"A\"]])*autumn_FOI_sp + (param[[\"M\"]]+param[[\"W\"]])*winter_FOI_sp \n",
+    "                 \n",
+    "    lambda_sm = (param[[\"M\"]]+param[[\"P\"]])*spring_FOI_sm + param[[\"M\"]]*summer_FOI_sm + \n",
+    "                (param[[\"M\"]]+param[[\"A\"]])*autumn_FOI_sm + (param[[\"M\"]]+param[[\"W\"]])*winter_FOI_sm \n",
+    "                \n",
+    "    lambda_au = (param[[\"M\"]]+param[[\"P\"]])*spring_FOI_au + param[[\"M\"]]*summer_FOI_au + \n",
+    "                (param[[\"M\"]]+param[[\"A\"]])*autumn_FOI_au + (param[[\"M\"]]+param[[\"W\"]])*winter_FOI_au \n",
+    "                \n",
+    "    lambda_wt = (param[[\"M\"]]+param[[\"P\"]])*spring_FOI_wt + param[[\"M\"]]*summer_FOI_wt +\n",
+    "                 (param[[\"M\"]]+param[[\"A\"]])*autumn_FOI_wt + (param[[\"M\"]]+param[[\"W\"]])*winter_FOI_wt \n",
+    "                \n",
     "    \n",
     "    # waning maternal immunity, same for all children\n",
     "    mu = param[[\"B\"]] \n",
